# LEVIS

./: Readme.txt  avgFile.txt
Desktop/LEVIS/: ip_addr.txt
Desktop/LEVIS/Camera/Both/: CMakeLists.txt  CMakeREADME.txt  ReadJson  ReadJson.cpp  ThermalManualPic  TwinCaptureFinal.py  dlib_predict_single_image.py  singleImage2.py  thermalScreenshot
Desktop/LEVIS/Camera/Both/Coordinates/: NoseCoords.py
Desktop/LEVIS/Camera/Both/KimDemo/: CoordinateData.json  CoordsWTemps  DetectToJson.py  TwinCaptureFinal.py  all_temps.csv
Desktop/LEVIS/Camera/Both/KimDemo/RawLeptonPlus/: LeptonThread.cpp  all_temps.csv
Desktop/LEVIS/Camera/Both/KimDemoRevised/: Demo_Revised  DetectToFifo.py  TwinCaptureFinal.py
Desktop/LEVIS/Camera/Both/KimDemoRevised/RawLeptonPlus/: LeptonThread.cpp  main.cpp  raspberrypi_video.pro
Desktop/LEVIS/Camera/Both/StreamCapture/: DetectToFifo.py  RGBLiveCoords.py  ReceiveFifo  ReceiveFifo.cpp  Thermal_Capture  TwinStreamDraft.py
Desktop/LEVIS/Camera/Both/StreamCapture/RawLeptonPlus/: LeptonThread.cpp  main.cpp
Desktop/LEVIS/Camera/Both/fifoExpiraments/: receive  receive.cpp  receive.py  send.py
Desktop/LEVIS/Camera/Both/jsonExpiraments/: trash  trash.cpp  trash.json
Desktop/LEVIS/Camera/Both/multiprocessing/: BothCamerasTrial.py  ThreadBoth  ThreadBoth.cpp  ThreadBoth.py  ThreadRGB  ThreadRGB.cpp  ThreadTest.cpp  ThreadThermal  ThreadThermal.cpp  raspberrypi_video
Desktop/LEVIS/Dimeji/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
Desktop/LEVIS/Homography/: DetectToFifo.py  Hmatrix.py  TwinCaptureFinal.py  (+1 more)
(+33 files in other folders)
